--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,12 +2,9 @@ spring:
   application:
     name: shortlink
   datasource:
-    url: jdbc:h2:mem:shortlinkdb
-    driver-class-name: org.h2.Driver
+    url: jdbc:mysql://localhost:3306/shortlinkdb?createDatabaseIfNotExist=true
     username: root
-    password: password
+    password: wannabe4
   jpa:
     show-sql: true
-  flyway:
-    enabled: true
 app-url: http://localhost:8080/
